Fixed capture filter

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -90,7 +90,7 @@
 					{EVENT_UNIT}
 				[/primary_unit]
 				[secondary_unit]
-					{SECOND_EVENT_UNIT}
+					{EVENT_SECOND_UNIT}
 				[/secondary_unit]		
 			[/fire_event]
 		[/then]
@@ -111,8 +111,8 @@
 			value=1,68
 			[if]
 				[have_location]
+					{EVENT_UNIT}
 					[filter]
-						{EVENT_UNIT}
 						[has_attack]
 							special_id=magical
 						[/has_attack]
@@ -128,7 +128,7 @@
 							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							{SECOND_EVENT_UNIT}
+							{EVENT_SECOND_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/else]
@@ -139,8 +139,8 @@
 			[if]
 				[not]
 					[have_location]
+						{EVENT_UNIT}
 						[filter]
-							{EVENT_UNIT}
 							race=mechanical
 						[/filter]
 					[/have_location]
@@ -216,7 +216,7 @@
 									{EVENT_UNIT}
 								[/primary_unit]
 								[secondary_unit]
-									{SECOND_EVENT_UNIT}
+									{EVENT_SECOND_UNIT}
 								[/secondary_unit]		
 							[/fire_event]
 						[/else]
@@ -229,7 +229,7 @@
 							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							{SECOND_EVENT_UNIT}
+							{EVENT_SECOND_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/else]
@@ -239,8 +239,8 @@
 			value=4
 			[if]
 				[have_location]
+					{EVENT_UNIT}
 					[filter]
-						{EVENT_UNIT}
 						race=mechanical
 					[/filter]
 				[/have_location]
@@ -251,13 +251,14 @@
 							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							{SECOND_EVENT_UNIT}
+							{EVENT_SECOND_UNIT}
 						[/secondary_unit]		
 					[/fire_event]				
 				[/then]
 				[else]
 					[if]
 						[have_location]
+							{EVENT_UNIT}						
 							time_of_day_id=first_watch,second_watch,underground,deep_underground
 						[/have_location]						
 						[then]
@@ -265,6 +266,7 @@
 						[/then]
 						[elseif]
 							[have_location]
+								{EVENT_UNIT}							
 								time_of_day_id=morning,afternoon,midday
 							[/have_location]
 							[then]
@@ -278,7 +280,7 @@
 									{EVENT_UNIT}
 								[/primary_unit]
 								[secondary_unit]
-									{SECOND_EVENT_UNIT}
+									{EVENT_SECOND_UNIT}
 								[/secondary_unit]		
 							[/fire_event]
 						[/else]
@@ -306,7 +308,7 @@
 							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							{SECOND_EVENT_UNIT}
+							{EVENT_SECOND_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/else]
@@ -316,8 +318,8 @@
 			value=8,70
 			[if]
 				[have_location]
+					{EVENT_UNIT}
 					[filter]
-						{EVENT_UNIT}
 						[has_attack]
 							special_id=magical
 						[/has_attack]
@@ -333,7 +335,7 @@
 							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							{SECOND_EVENT_UNIT}
+							{EVENT_SECOND_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/else]
@@ -353,7 +355,7 @@
 							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							{SECOND_EVENT_UNIT}
+							{EVENT_SECOND_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/else]
@@ -363,15 +365,15 @@
 			value=12
 			[if]
 				[have_location]
+					{EVENT_UNIT}
 					[filter]
-						{EVENT_UNIT}
 						race=horse,monster,wolf
 					[/filter]
 				[/have_location]
 				[or]
 					[have_location]
+						{EVENT_UNIT}
 						[filter]						
-							{EVENT_UNIT}
 							[filter_wml]
 								[movetype]
 									name=undeadspirit
@@ -387,22 +389,22 @@
 							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							{SECOND_EVENT_UNIT}
+							{EVENT_SECOND_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/then]
 				[elseif]
 					[have_location]
+						{EVENT_UNIT}
 						[filter]
-							{EVENT_UNIT}
 							race=bats,falcon,gryphon,drake
 						[/filter]
 					[/have_location]
 					[then]
 						[if]
 							[have_location]
+								{EVENT_UNIT}
 								[filter]
-									{EVENT_UNIT}
 									formula="unit.max_moves <= 1"
 								[/filter]
 							[/have_location]	
@@ -416,7 +418,7 @@
 										{EVENT_UNIT}
 									[/primary_unit]
 									[secondary_unit]
-										{SECOND_EVENT_UNIT}
+										{EVENT_SECOND_UNIT}
 									[/secondary_unit]
 								[/fire_event]
 							[/else]
@@ -432,13 +434,14 @@
 			value=13
 			[if]
 				[have_location]
+					{EVENT_UNIT}
 					[filter]
-						{EVENT_UNIT}
 						race=bats,falcon,gryphon,naga,merman
 					[/filter]
 				[/have_location]
 				[or]
 					[have_location]
+						{EVENT_UNIT}					
 						[filter]
 							formula="unit.max_moves <= 1"
 						[/filter]
@@ -446,8 +449,8 @@
 				[/or]
 				[or]
 					[have_location]
+						{EVENT_UNIT}
 						[filter]						
-							{EVENT_UNIT}
 							[filter_wml]
 								[movetype]
 									name=undeadspirit
@@ -463,7 +466,7 @@
 							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							{SECOND_EVENT_UNIT}
+							{EVENT_SECOND_UNIT}
 						[/secondary_unit]		
 					[/fire_event]					
 				[/then]
@@ -479,15 +482,15 @@
 				[and]
 					[not]
 						[have_location]
+							{EVENT_UNIT}
 							[filter]
-								{EVENT_UNIT}
 								race=mechanical
 							[/filter]
 						[/have_location]
 						[or]
 							[have_location]
+								{EVENT_UNIT}
 								[filter]						
-									{EVENT_UNIT}
 									[filter_wml]
 										[movetype]
 											name=undeadspirit
@@ -508,7 +511,7 @@
 							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							{SECOND_EVENT_UNIT}
+							{EVENT_SECOND_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/else]
@@ -528,7 +531,7 @@
 							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							{SECOND_EVENT_UNIT}
+							{EVENT_SECOND_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/else]
@@ -538,8 +541,8 @@
 			value=18
 			[if]
 				[have_location]
+					{EVENT_UNIT}
 					[filter]
-						{EVENT_UNIT}
 						[has_attack]
 							special_id=berserk
 						[/has_attack]
@@ -548,8 +551,8 @@
 				[or]
 					[not]
 						[have_location]	
+							{EVENT_UNIT}
 							[filter]
-								{EVENT_UNIT}
 								[has_attack]
 									range=melee
 								[/has_attack]	
@@ -564,7 +567,7 @@
 							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							{SECOND_EVENT_UNIT}
+							{EVENT_SECOND_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/then]
@@ -577,15 +580,15 @@
 			value=19
 			[if]
 				[have_location]
+					{EVENT_UNIT}
 					[filter]
-						{EVENT_UNIT}
 						race=mechanical
 					[/filter]
 				[/have_location]
 				[or]
 					[have_location]
+						{EVENT_UNIT}
 						[filter]
-							{EVENT_UNIT}
 							status=unpoisonable
 						[/filter]
 					[/have_location]					
@@ -597,7 +600,7 @@
 							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							{SECOND_EVENT_UNIT}
+							{EVENT_SECOND_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/then]
@@ -617,12 +620,7 @@
 		[case]
 			value=71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100
 			[if]
-				[have_location]
-					[filter]
-						{EVENT_UNIT}
-						{NFW_FILTER_HEROES}
-					[/filter]
-				[/have_location]
+				{NFW_FILTER_HEROES}
 				[then]
 					{NFWME_captured_WOUND}				
 				[/then]
@@ -633,7 +631,7 @@
 							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							{SECOND_EVENT_UNIT}
+							{EVENT_SECOND_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/else]
@@ -643,8 +641,8 @@
 			value=22
 			[if]
 				[have_location]
+					{EVENT_UNIT}
 					[filter]
-						{EVENT_UNIT}
 						race=mechanical
 					[/filter]
 				[/have_location]
@@ -655,7 +653,7 @@
 							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							{SECOND_EVENT_UNIT}
+							{EVENT_SECOND_UNIT}
 						[/secondary_unit]		
 					[/fire_event]					
 				[/then]
@@ -668,8 +666,8 @@
 			value=23
 			[if]
 				[have_location]
+					{EVENT_UNIT}
 					[filter]
-						{EVENT_UNIT}
 						race=mechanical
 					[/filter]
 				[/have_location]
@@ -680,7 +678,7 @@
 							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							{SECOND_EVENT_UNIT}
+							{EVENT_SECOND_UNIT}
 						[/secondary_unit]		
 					[/fire_event]					
 				[/then]
@@ -701,8 +699,8 @@
 			value=26
 			[if]
 				[have_location]
+					{EVENT_UNIT}
 					[filter]
-						{EVENT_UNIT}
 						race=mechanical
 					[/filter]
 				[/have_location]
@@ -713,7 +711,7 @@
 							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							{SECOND_EVENT_UNIT}
+							{EVENT_SECOND_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/then]
@@ -726,8 +724,8 @@
 			value=27,67
 			[if]
 				[have_location]
+					{EVENT_UNIT}
 					[filter]
-						{EVENT_UNIT}
 						formula="unit.experience < (unit.max_experience / 2)"
 					[/filter]
 				[/have_location]
@@ -738,7 +736,7 @@
 							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							{SECOND_EVENT_UNIT}
+							{EVENT_SECOND_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/then]
@@ -754,8 +752,8 @@
 				[and]
 					[not]
 						[have_location]
+							{EVENT_UNIT}
 							[filter]
-								{EVENT_UNIT}
 								[filter_wml]
 									[movetype]
 										name=undeadspirit
@@ -781,7 +779,7 @@
 							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							{SECOND_EVENT_UNIT}
+							{EVENT_SECOND_UNIT}
 						[/secondary_unit]		
 					[/fire_event]				
 				[/else]
@@ -794,8 +792,8 @@
 				[and]
 					[not]
 						[have_location]
+							{EVENT_UNIT}
 							[filter]
-								{EVENT_UNIT}
 								race=undead
 							[/filter]
 						[/have_location]				
@@ -817,7 +815,7 @@
 							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							{SECOND_EVENT_UNIT}
+							{EVENT_SECOND_UNIT}
 						[/secondary_unit]		
 					[/fire_event]					
 				[/else]
@@ -837,7 +835,7 @@
 							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							{SECOND_EVENT_UNIT}
+							{EVENT_SECOND_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/else]
@@ -857,7 +855,7 @@
 							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							{SECOND_EVENT_UNIT}
+							{EVENT_SECOND_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/else]
