--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -73,6 +73,12 @@
 	
 	[remove_object]
 		{EVENT_UNIT}
+		ability=maimed_display_healing
+		object_id=maimed_logic_object
+	[/remove_object]	
+	
+	[remove_object]
+		{EVENT_UNIT}
 		ability=necrosis_display_healing
 		object_id=necrosis
 	[/remove_object]
@@ -115,7 +121,7 @@
 		[case]
 			value=1
 			[remove_object]
-				{SECOND_EVENT_UNIT}
+				{EVENT_SECOND_UNIT}
 				object_id=fear_of_water
 			[/remove_object]
 			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Aquaphobia" {NFWME_COLOR_GREEN}}
@@ -141,7 +147,7 @@
 		[case]
 			value=1
 			[remove_object]
-				{SECOND_EVENT_UNIT}
+				{EVENT_SECOND_UNIT}
 				object_id=fear_of_hight
 			[/remove_object]
 			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Acrophobia" {NFWME_COLOR_GREEN}}
@@ -167,7 +173,7 @@
 		[case]
 			value=1
 			[remove_object]
-				{SECOND_EVENT_UNIT}
+				{EVENT_SECOND_UNIT}
 				object_id=fear_of_desert
 			[/remove_object]
 			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Erimophobia" {NFWME_COLOR_GREEN}}
@@ -193,7 +199,7 @@
 		[case]
 			value=1
 			[remove_object]
-				{SECOND_EVENT_UNIT}
+				{EVENT_SECOND_UNIT}
 				object_id=fear_of_cave
 			[/remove_object]
 			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Claustrophobia" {NFWME_COLOR_GREEN}}
@@ -219,7 +225,7 @@
 		[case]
 			value=1
 			[remove_object]
-				{SECOND_EVENT_UNIT}
+				{EVENT_SECOND_UNIT}
 				object_id=fear_of_plant
 			[/remove_object]
 			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Dendrophobia" {NFWME_COLOR_GREEN}}
@@ -246,7 +252,7 @@
 		[case]
 			value=1
 			[remove_object]
-				{SECOND_EVENT_UNIT}
+				{EVENT_SECOND_UNIT}
 				object_id=fear_of_open
 			[/remove_object]
 			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Agoraphobia" {NFWME_COLOR_GREEN}}
@@ -264,14 +270,9 @@
 		ability=coward_display
 	[/filter_second]
 	
-	[set_variable]
-		name=nfwme_level_diff
-		value=$second_unit.level
-	[/set_variable]
-		
 [if]
 	[variable]
-		name=nfwme_level_diff
+		name=second_unit.level
 		less_than=$unit.level
 	[/variable]
 	[or]
@@ -282,7 +283,7 @@
 	[/or]
 	[then]
 		[remove_object]
-			{SECOND_EVENT_UNIT}
+			{EVENT_SECOND_UNIT}
 			object_id=coward
 		[/remove_object]
 		{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Cowardice" {NFWME_COLOR_GREEN}}
@@ -312,7 +313,7 @@
 		[case]
 			value=1
 			[remove_object]
-				{SECOND_EVENT_UNIT}
+				{EVENT_SECOND_UNIT}
 				object_id=fear_of_weapon
 			[/remove_object]
 			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of $second_unit.variables.scary_weapon_translated" {NFWME_COLOR_GREEN}}
@@ -341,13 +342,14 @@
 		[case]
 			value=1
 			[remove_object]
-				{SECOND_EVENT_UNIT}
+				{EVENT_SECOND_UNIT}
 				object_id=fear_of_light
 			[/remove_object]
 			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of the light" {NFWME_COLOR_GREEN}}
 		[/case]
 	[/switch]
 [/event]
+
 #fear of dark
 [event]
 	name=last_breath
@@ -367,7 +369,7 @@
 		[case]
 			value=1
 			[remove_object]
-				{SECOND_EVENT_UNIT}
+				{EVENT_SECOND_UNIT}
 				object_id=fear_of_dark
 			[/remove_object]
 			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of the dark" {NFWME_COLOR_GREEN}}
