--- a/utils/Wound_logic.cfg
+++ b/utils/Wound_logic.cfg
@@ -77,14 +77,12 @@
 
 #memory loss TESTED
 [event]
-	name=side_turn
+	name=turn_refresh
 	id=nfwme_memory_loss
 	first_time_only=no
-	side=$side_number
 	[modify_unit]
 		[filter]
 			ability=short_term_memory_loss_dummy
-			side=$side_number
 		[/filter]
 		[effect]
 			apply_to=experience
@@ -109,7 +107,6 @@
 			[modify_unit]
 				[filter]
 					ability=sick_display
-					side=$side_number
 				[/filter]
 				[effect]
 					apply_to=status
@@ -124,7 +121,6 @@
 			[modify_unit]
 				[filter]
 					ability=infection_display
-					side=$side_number
 				[/filter]
 				[effect]
 					apply_to=status
