First stable upload on 1.16 server

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -289,7 +289,7 @@
 			[/if]
 		[/case]
 		[case]
-			value=5,6,7
+			value=5,6,7,99
 			[if]
 				{VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals ice}
 				[or]
@@ -342,9 +342,15 @@
 			[/if]
 		[/case]
 		[case]
-			value=9,10,11
+			value=9,10,11,100
 			[if]
 				{VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals fire}
+				[or]
+					[have_location]
+						{EVENT_UNIT}
+						terrain=*^Ecf,*^Eb,Ql*,Mv*
+					[/have_location]
+				[/or]
 				[then]
 					{NFWME_burned_WOUND}
 				[/then]
@@ -618,7 +624,7 @@
 			{NFWME_captured_WOUND}
 		[/case]
 		[case]
-			value=71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100
+			value=71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98
 			[if]
 				{NFW_FILTER_HEROES}
 				[then]
