--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -259,7 +259,7 @@
 					[if]
 						[have_location]
 							{EVENT_UNIT}						
-							time_of_day_id=first_watch,second_watch,underground,deep_underground
+							time_of_day_id=first_watch,second_watch,midnight,underground,deep_underground
 						[/have_location]						
 						[then]
 							{NFWME_fear_of_dark_WOUND}
