--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -328,11 +328,12 @@
 	name=last_breath
 	id=nfwme_fear_of_light_healing
 	first_time_only=no
-	{VARIABLE_OP rand_heal_fear rand(1..10)}
+	{VARIABLE_OP rand_heal_fear rand(1..20)}
 	
 	[filter_second]
 		ability=nfwme_scared_of_light
 		[filter_location]
+			{EVENT_SECOND_UNIT}
 			time_of_day_id=morning,afternoon,midday
 		[/filter_location]
 	[/filter_second]
@@ -355,12 +356,13 @@
 	name=last_breath
 	id=nfwme_fear_of_dark_healing
 	first_time_only=no
-	{VARIABLE_OP rand_heal_fear rand(1..10)}
+	{VARIABLE_OP rand_heal_fear rand(1..20)}
 	
 	[filter_second]
 		ability=nfwme_scared_of_dark
 		[filter_location]
-			time_of_day_id=first_watch,second_watch,underground,deep_underground
+			{EVENT_SECOND_UNIT}
+			time_of_day_id=first_watch,second_watch,midnight,underground,deep_underground
 		[/filter_location]
 	[/filter_second]
 	
