--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -182,6 +182,16 @@
 	[/if]
 	[if]
 		{VARIABLE_CONDITIONAL nfw_first_death not_equals yes}
+		[and]
+			[not]
+				[have_location]
+					{EVENT_UNIT}
+					[filter]
+						trait=nfwme_dead,nfwme_plagued
+					[/filter]
+				[/have_location]
+			[/not]
+		[/and]
 		[then]
 			[message]
 				speaker=narrator
