--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -572,7 +572,8 @@ Face your fears to try to overcome them."
 						affect_self=yes
 						[filter]
 							[filter_location]
-								time_of_day_id=first_watch,second_watch,underground,deep_underground
+								{EVENT_UNIT}
+								time_of_day_id=first_watch,second_watch,midnight,underground,deep_underground
 							[/filter_location]
 						[/filter]
 						sub=1
@@ -600,6 +601,7 @@ Face your fears to try and overcome them."
 						affect_self=yes
 						[filter]
 							[filter_location]
+								{EVENT_UNIT}
 								time_of_day_id=morning,afternoon,midday
 							[/filter_location]
 						[/filter]
