Fixed Memory Loss

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -411,7 +411,7 @@
 							[have_location]
 								{EVENT_UNIT}
 								[filter]
-									formula="unit.max_moves <= 1"
+									formula="max_moves <= 1"
 								[/filter]
 							[/have_location]	
 							[then]
@@ -449,7 +449,7 @@
 					[have_location]
 						{EVENT_UNIT}					
 						[filter]
-							formula="unit.max_moves <= 1"
+							formula="max_moves <= 1"
 						[/filter]
 					[/have_location]						
 				[/or]
@@ -732,7 +732,7 @@
 				[have_location]
 					{EVENT_UNIT}
 					[filter]
-						formula="unit.experience < (unit.max_experience / 2)"
+						formula="experience < (max_experience / 2)"
 					[/filter]
 				[/have_location]
 				[then]
