TROW finale event

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -68,6 +68,13 @@
 	[filter_condition]
 		{VARIABLE_CONDITIONAL nfw_all_plagued equals yes}
 	[/filter_condition]
+	[filter]
+		{EVENT_UNIT}
+		side=1
+		[not]
+			id=Commander Aethyr
+		[/not]
+	[/filter]
 	{NFWME_plagued_WOUND}
 	{VARIABLE nfwe_already_dead yes}
 [/event]
