--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -87,8 +87,6 @@
 				image="units/human-loyalists/duelist-die5.png"				
             [/message]
         [/case]
-#endif
-#ifdef CAMPAIGN_THE_RISE_OF_WESNOTH
         [case]
             value=06_Temple_in_the_Deep
 			[message]
@@ -114,6 +112,21 @@
 				[/option]
 			[/message]
         [/case]
+        [case]
+            value=22_The_Rise_of_Wesnoth
+			[message]
+				speaker=narrator
+				message=_ "As long as the Lich-Lord Jevyan is alive, all your dead units will rise as undead regardless of cause of death."
+				image="units/human-loyalists/duelist-die5.png"				
+			[/message]
+			[fire_event]
+				name=nfw_lord_lenvan
+			[/fire_event]
+			[set_variable]
+				name=nfw_all_plagued
+				value=yes
+			[/set_variable]
+        [/case]
 #endif
     [/switch]
 [/event]
@@ -131,7 +144,7 @@
 		id=nfw_catch_lord_lenvan
 		
 		[filter]
-			id=Lich-Lord Lenvan
+			id=Lich-Lord Lenvan,Lich-Lord Jevyan
 		[/filter]
 		[set_variable]
 			name=nfw_all_plagued
