--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -127,6 +127,7 @@
 			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Aquaphobia" {NFWME_COLOR_GREEN}}
 		[/case]
 	[/switch]
+    {CLEAR_VARIABLE rand_heal_fear}
 [/event]
 #fear of hight
 [event]
@@ -153,6 +154,7 @@
 			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Acrophobia" {NFWME_COLOR_GREEN}}
 		[/case]
 	[/switch]
+    {CLEAR_VARIABLE rand_heal_fear}
 [/event]
 #fear of desert
 [event]
@@ -179,6 +181,7 @@
 			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Erimophobia" {NFWME_COLOR_GREEN}}
 		[/case]
 	[/switch]
+    {CLEAR_VARIABLE rand_heal_fear}
 [/event]
 #fear of cave
 [event]
@@ -205,6 +208,7 @@
 			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Claustrophobia" {NFWME_COLOR_GREEN}}
 		[/case]
 	[/switch]
+    {CLEAR_VARIABLE rand_heal_fear}
 [/event]
 #fear of plant
 [event]
@@ -231,6 +235,7 @@
 			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Dendrophobia" {NFWME_COLOR_GREEN}}
 		[/case]
 	[/switch]
+    {CLEAR_VARIABLE rand_heal_fear}
 [/event]
 
 #fear of open spaces
@@ -258,6 +263,7 @@
 			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Agoraphobia" {NFWME_COLOR_GREEN}}
 		[/case]
 	[/switch]
+    {CLEAR_VARIABLE rand_heal_fear}
 [/event]
 
 #coward
@@ -265,30 +271,39 @@
 	name=last_breath
 	id=nfwme_coward_healing
 	first_time_only=no
-
+	{VARIABLE_OP rand_heal_fear rand(1..4)}
+	
 	[filter_second]
 		ability=coward_display
 	[/filter_second]
+
+	[switch]
+		variable=rand_heal_fear
+		[case]
+			value=1
+			[if]
+				[variable]
+					name=second_unit.level
+					less_than=$unit.level
+				[/variable]
+				[or]
+					[variable]
+						name=unit.advances_to
+						equals=""
+					[/variable]
+				[/or]
+				[then]
+					[remove_object]
+						{EVENT_SECOND_UNIT}
+						object_id=coward
+					[/remove_object]
+					{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Cowardice" {NFWME_COLOR_GREEN}}
+				[/then]
+			[/if]
+		[/case]
+	[/switch]
 	
-[if]
-	[variable]
-		name=second_unit.level
-		less_than=$unit.level
-	[/variable]
-	[or]
-		[variable]
-			name=unit.advances_to
-			equals=""
-		[/variable]
-	[/or]
-	[then]
-		[remove_object]
-			{EVENT_SECOND_UNIT}
-			object_id=coward
-		[/remove_object]
-		{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Cowardice" {NFWME_COLOR_GREEN}}
-	[/then]
-[/if]
+    {CLEAR_VARIABLE rand_heal_fear}
 [/event]
 
 #fear of weapon 
@@ -321,6 +336,7 @@
 			{CLEAR_VARIABLE $second_unit.variables.scary_weapon_translated}
 		[/case]
 	[/switch]
+    {CLEAR_VARIABLE rand_heal_fear}
 [/event]
 
 #fear of light
@@ -349,6 +365,7 @@
 			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of the light" {NFWME_COLOR_GREEN}}
 		[/case]
 	[/switch]
+    {CLEAR_VARIABLE rand_heal_fear}
 [/event]
 
 #fear of dark
@@ -377,4 +394,5 @@
 			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of the dark" {NFWME_COLOR_GREEN}}
 		[/case]
 	[/switch]
+    {CLEAR_VARIABLE rand_heal_fear}
 [/event]
