--- a/utils/Options.cfg
+++ b/utils/Options.cfg
@@ -1,8 +1,27 @@
 #textdomain wesnoth-Non_Fatal_Wounds
 [options]
-	
+
+
     [choice]
-        id=deadundead
+        id=nfw_wounds
+        default=0
+        name=_"Activate Wounds"
+        description=_"Activate or deactivate random wounds. If you deactivate, the units will disappear without any message and will return in the next scenario unchanged (except in special cases). If you choose to allow lose plagued units, they will disappear forever, since they were converted by the enemy."
+        [item]
+            name=_"Yes"
+            value=0
+        [/item]
+        [item]
+            name=_"No"
+            value=1
+        [/item]
+        [item]
+            name=_"No, but can lost plagued unit"
+            value=2
+        [/item]
+    [/choice]
+    [choice]
+        id=nfw_deadundead
         default=0
         name=_"Enable Death"
         description=_"Adds death as a possibility to the table. Undeath option will bring some of them back as undead or ghost."
@@ -20,19 +39,31 @@
         [/item]
     [/choice]
 	[checkbox]
-		id=funny
+		id=nfw_funny
 		name=_"Non-canonical Wounds"
 		description=_"These make no logical sense."
 		default=no
 	[/checkbox]
 [/options]
 
+#define NFWME_wounds_ENABLED
+    {VARIABLE_CONDITIONAL nfw_wounds equals 0}
+#enddef
+
+#define NFWME_wounds_DISABLED
+    {VARIABLE_CONDITIONAL nfw_wounds equals 1}
+#enddef
+
+#define NFWME_wounds_DISABLED_with_plague
+    {VARIABLE_CONDITIONAL nfw_wounds equals 2}
+#enddef
+
 #define NFWME_dead_ENABLED
-    {VARIABLE_CONDITIONAL deadundead equals 1}
+    {VARIABLE_CONDITIONAL nfw_deadundead equals 1}
 #enddef
 
 #define NFWME_undead_ENABLED
-    {VARIABLE_CONDITIONAL deadundead equals 2}
+    {VARIABLE_CONDITIONAL nfw_deadundead equals 2}
 #enddef
 
 #define NFWME_funny_ENABLED
