--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -45,6 +45,11 @@
 	first_time_only=no
 	[filter_condition]
 		{VARIABLE_CONDITIONAL nfw_all_plagued not_equals yes}
+		[and]
+			[not]
+				{NFWME_wounds_DISABLED}
+			[/not]
+		[/and]
 	[/filter_condition]
 	[filter]
 		[not]
@@ -60,13 +65,17 @@
 [/event]
 
 #filter forced plagued for some scenarios
-
 [event]
 	name=last_breath
 	id=nfwme_death_plague_forced
 	first_time_only=no
 	[filter_condition]
 		{VARIABLE_CONDITIONAL nfw_all_plagued equals yes}
+		[and]
+			[not]
+				{NFWME_wounds_DISABLED}
+			[/not]
+		[/and]
 	[/filter_condition]
 	[filter]
 		{EVENT_UNIT}
@@ -80,17 +89,26 @@
 [/event]
 
 #random wound table
-
 [event]
 	name=last_breath
 	id=nfwme_wound_table
 	first_time_only=no
+
 	{VARIABLE nfwme_rand_scary_weapon $second_weapon.name}
 	{VARIABLE nfwme_rand_weapon_type $second_weapon.type}
 
 	[if]
-		{VARIABLE_CONDITIONAL nfwe_already_dead not_equals yes}
+		{VARIABLE_CONDITIONAL nfwe_already_dead equals yes}
+		[or]
+			{NFWME_wounds_DISABLED}
+		[/or]
+		[or]
+			{NFWME_wounds_DISABLED_with_plague}
+		[/or]
 		[then]
+			{CLEAR_VARIABLE nfwe_already_dead}
+		[/then]
+		[else]
 			[fire_event]
 				name=nfwme_rand_wound
 				[primary_unit]
@@ -100,9 +118,6 @@
 					{EVENT_SECOND_UNIT}
 				[/secondary_unit]		
 			[/fire_event]
-		[/then]
-		[else]
-			{CLEAR_VARIABLE nfwe_already_dead}
 		[/else]
 	[/if]
 [/event]
