--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -230,7 +230,7 @@
 					[display]
 						id=captured_unit_display
 						name="<span color='#DA0000'>"+_"captured"+"</span>"
-						description=_"Captured units have a increased recall cost untill you recall them once (recall+(10xlevel))."+_"Current cost: $unit.recall_cost"
+						description=_"Captured units have a increased recall cost untill you recall them once (recall+(10xlevel))."
 					[/display]
 				[/abilities]
 			[/effect]
@@ -572,7 +572,6 @@ Face your fears to try to overcome them."
 						affect_self=yes
 						[filter]
 							[filter_location]
-								{EVENT_UNIT}
 								time_of_day_id=first_watch,second_watch,midnight,underground,deep_underground
 							[/filter_location]
 						[/filter]
@@ -601,7 +600,6 @@ Face your fears to try and overcome them."
 						affect_self=yes
 						[filter]
 							[filter_location]
-								{EVENT_UNIT}
 								time_of_day_id=morning,afternoon,midday
 							[/filter_location]
 						[/filter]
