--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -63,6 +63,9 @@
 [event]
     name=nfw_dialogue_on_death
     first_time_only=no
+	[filter_condition]
+		{NFWME_wounds_ENABLED}
+	[/filter_condition]	
     [filter]
 		{EVENT_UNIT}
 		[filter_side]
