--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -699,6 +699,9 @@
 						race=mechanical
 					[/filter]
 				[/have_location]
+				[or]
+					{VARIABLE_CONDITIONAL aww_def_ratio greater_than 0}
+				[/or]
 				[then]
 					[fire_event]
 						name=nfwme_rand_wound
