--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -85,8 +85,8 @@
 	
 	[remove_object]
 		{EVENT_UNIT}
-		ability=memory_loss_display_healing
-		object_id=short_term_memory_loss
+		ability=amnesia_display_healing
+		object_id=amnesia
 	[/remove_object]
 	
 	[remove_object]
@@ -271,7 +271,7 @@
 	name=last_breath
 	id=nfwme_coward_healing
 	first_time_only=no
-	{VARIABLE_OP rand_heal_fear rand(1..4)}
+	{VARIABLE_OP rand_heal_fear rand(1..5)}
 	
 	[filter_second]
 		ability=coward_display
