--- a/utils/Wound_logic.cfg
+++ b/utils/Wound_logic.cfg
@@ -77,12 +77,12 @@
 
 #memory loss TESTED
 [event]
-	name=turn_refresh
-	id=nfwme_memory_loss
+	name=turn end
+	id=nfwme_amnesia
 	first_time_only=no
 	[modify_unit]
 		[filter]
-			ability=short_term_memory_loss_dummy
+			ability=amnesia_dummy
 		[/filter]
 		[effect]
 			apply_to=experience
@@ -93,7 +93,7 @@
 
 #handles wounds with randomization
 [event]
-	name=turn_refresh
+	name=turn end
 	id=nfwme_random_status
 	first_time_only=no
 	{VARIABLE_OP rand_status rand(1..10)}
