--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -297,7 +297,7 @@
 						id=coward_display
 						name="<span color='#DA0000'>"+_"coward"+"</span>"
 						description=_"Accuracy -15%
-Redeem yourself by defeating an opponent with at least 1 level higher than you, or any opponent when in AMLA"
+Redeem yourself by defeating an opponent with at least 1 level higher than you or at his higher level."
 					[/display]
 				[/abilities]
 			[/effect]
@@ -919,12 +919,12 @@ All damage is reduced by 20% and blade resistance is lowered by 30%. You will ne
 	[modify_unit]
 		{FILTER_EVENT_UNIT}
 		[object]
-			id=short_term_memory_loss
+			id=amnesia
 			[effect]
 				apply_to=new_ability
 				[abilities]
 					[display]
-						id=short_term_memory_loss_dummy
+						id=amnesia_dummy
 						name="<span color='#DA0000'>"+_"amnesia"+"</span>"
 						description=_"Every round you lose 2 exp."
 					[/display]
@@ -933,13 +933,13 @@ All damage is reduced by 20% and blade resistance is lowered by 30%. You will ne
 			[effect]
 				apply_to=new_advancement
 					[advancement]
-						id=NFWME_memory_loss_Healing
+						id=NFWME_amnesia_Healing
 						description= _"Recover from Amnesia."
 						[effect]
 							apply_to=new_ability
 							[abilities]
 								[display]
-									id=memory_loss_display_healing
+									id=amnesia_display_healing
 								[/display]
 							[/abilities]
 						[/effect]
