--- a/utils/Options.cfg
+++ b/utils/Options.cfg
@@ -1,9 +1,7 @@
 #textdomain wesnoth-Non_Fatal_Wounds
 [options]
-
-
     [choice]
-        id=nfw_wounds
+        id=nfw_01
         default=0
         name=_"Activate Wounds"
         description=_"Activate or deactivate random wounds. If you deactivate, the units will disappear without any message and will return in the next scenario unchanged (except in special cases). If you choose to allow lose plagued units, they will disappear forever, since they were converted by the enemy."
@@ -20,11 +18,12 @@
             value=2
         [/item]
     [/choice]
+
     [choice]
-        id=nfw_deadundead
+        id=nfw_02
         default=0
         name=_"Enable Death"
-        description=_"Adds death as a possibility to the table. Undeath option will bring some of them back as undead or ghost."
+        description=_"Adds death as a possibility to the table. Undeath option will bring some of them back as undead or ghost."+" "+_"Only applies with Wounds enabled."
         [item]
             name=_"No"
             value=0
@@ -38,34 +37,70 @@
             value=2
         [/item]
     [/choice]
+	
 	[checkbox]
-		id=nfw_funny
-		name=_"Non-canonical Wounds"
-		description=_"These make no logical sense."
+		id=nfw_03
+		name=_"Funny wounds"
+		description=_"Add Stepped on LEGO and Paper cut as a possibility to the table."
 		default=no
+	[/checkbox]
+
+	[checkbox]
+		id=nfw_04
+		name=_"Help Menu"
+		description=_"Add a contextual menu on right click with help and configurations for all features."
+		default=yes
 	[/checkbox]
 [/options]
 
+[event]
+	name=prestart
+    first_time_only=yes
+	[filter_condition]
+		{VARIABLE_CONDITIONAL nfw_options_first not_equals yes}
+	[/filter_condition]
+	[set_variable]
+		name=nfwe_wounds
+		to_variable=nfw_01
+	[/set_variable]
+	[set_variable]
+		name=nfwe_deadundead
+		to_variable=nfw_02
+	[/set_variable]
+	[set_variable]
+		name=nfwe_funny
+		to_variable=nfw_03
+	[/set_variable]
+	[set_variable]
+		name=nfw_options_first
+		value=yes
+	[/set_variable]
+[/event]
+
 #define NFWME_wounds_ENABLED
-    {VARIABLE_CONDITIONAL nfw_wounds equals 0}
+    {VARIABLE_CONDITIONAL nfwe_wounds equals 0}
 #enddef
 
 #define NFWME_wounds_DISABLED
-    {VARIABLE_CONDITIONAL nfw_wounds equals 1}
+    {VARIABLE_CONDITIONAL nfwe_wounds equals 1}
 #enddef
 
 #define NFWME_wounds_DISABLED_with_plague
-    {VARIABLE_CONDITIONAL nfw_wounds equals 2}
+    {VARIABLE_CONDITIONAL nfwe_wounds equals 2}
 #enddef
 
 #define NFWME_dead_ENABLED
-    {VARIABLE_CONDITIONAL nfw_deadundead equals 1}
+    {VARIABLE_CONDITIONAL nfwe_deadundead equals 1}
 #enddef
 
 #define NFWME_undead_ENABLED
-    {VARIABLE_CONDITIONAL nfw_deadundead equals 2}
+    {VARIABLE_CONDITIONAL nfwe_deadundead equals 2}
 #enddef
 
 #define NFWME_funny_ENABLED
-    {VARIABLE_CONDITIONAL funny equals yes}
+    {VARIABLE_CONDITIONAL nfwe_funny equals yes}
+#enddef
+
+#define NFW_ENABLED_HELP
+    {VARIABLE_CONDITIONAL nfw_04 equals yes}
 #enddef
