--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -777,7 +777,7 @@
 			[/if]
 		[/case]
 		[case]
-			value=28,29,30,31,32,33,34,35,36,37
+			value=28,29,30,31,32,33
 			[if]
 				{NFWME_undead_ENABLED}
 				[and]
@@ -817,7 +817,7 @@
 			[/if]
 		[/case]
 		[case]
-			value=38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57
+			value=38,39,40,41,42,43,44,45,46,47
 			[if]
 				{NFWME_undead_ENABLED}
 				[and]
@@ -839,6 +839,29 @@
 						{NFWME_dead_WOUND}
 					[/then]			
 				[/elseif]	
+				[else]
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							{EVENT_UNIT}
+						[/primary_unit]
+						[secondary_unit]
+							{EVENT_SECOND_UNIT}
+						[/secondary_unit]		
+					[/fire_event]					
+				[/else]
+			[/if]
+		[/case]
+		[case]
+			value=34,35,36,37,48,49,50,51,52,53,54,55,56,57
+			[if]
+				{NFWME_dead_ENABLED}
+				[or]
+					{NFWME_undead_ENABLED}
+				[/or]
+				[then]
+					{NFWME_dead_WOUND}
+				[/then]
 				[else]
 					[fire_event]
 						name=nfwme_rand_wound
