--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -1038,7 +1038,6 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 #define NFWME_undead_ghost_WOUND
     [modify_unit]
 		{FILTER_EVENT_UNIT}
-		
 		{TRAIT_UNDEAD}
 		[trait]
 			id=ghost_trait
@@ -1113,7 +1112,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 					type=cold,fire
 				[/not]
 				set_type=arcane
-				set_description=_"spectral "+$unit.attack[0].name
+				set_description=_"spectral "+$unit.attack[0].description
 				set_icon=$unit.attack[0].icon
 				[set_specials]
 					mode=append
@@ -1137,7 +1136,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 					type=arcane,fire
 				[/not]
 				set_type=cold
-				set_description=_"spectral "+$unit.attack[$($unit.attack.length - 1)].name
+				set_description=_"spectral "+$unit.attack[$($unit.attack.length - 1)].description
 				set_icon=$unit.attack[$($unit.attack.length - 1)].icon
 			[/effect]
 		[/trait]
@@ -1147,34 +1146,18 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 		[filter]
 			x=$x1
 			y=$y1
-			level=2,3,4
+			formula="level > 1"
 		[/filter]
 		[effect]
 			apply_to=new_advancement
 			{AMLA_DEFAULT}
 		[/effect]
+		[set_variable]
+			name=unit.advances_to
+			value="null"
+		[/set_variable]
 	[/modify_unit]
 
-	[store_unit]
-		[filter]
-			{EVENT_UNIT}
-			level=2,3,4
-		[/filter]
-		mode=replace
-		variable=nfwme_ghost_advancment
-		kill=no
-	[/store_unit]
-
-	[set_variable]
-		name=nfwme_ghost_advancment.advances_to
-		value="null"
-	[/set_variable]
-
-	[unstore_unit]
-		variable=nfwme_ghost_advancment
-		{EVENT_UNIT}
-	[/unstore_unit]
-	{CLEAR_VARIABLE nfwme_ghost_advancment}
 	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Ghost" {NFWME_COLOR_RED}}
 #enddef
 
@@ -1194,11 +1177,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 				apply_to=image_mod
 				replace=~O(30%)~GS( )
 			[/effect]
-			[effect]
-				apply_to=overlay
-				add=units/undead/soulless.png~RC(magenta>red)
-			[/effect]
-			
+
 			#movement
 			[effect]
 				apply_to=movement_costs
@@ -1271,7 +1250,92 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 			[/effect]
 		[/trait]
 	[/modify_unit]
-	
+	[store_side]
+		side=$unit.side
+		variable=side_color
+	[/store_side]
+	[if]
+		{VARIABLE_CONDITIONAL unit.undead_variation equals bat}
+		[then]
+			[modify_unit]
+				{FILTER_EVENT_UNIT}
+				[trait]
+					id=nfwme_corpse_image
+					[effect]
+						apply_to=overlay
+						add=units/undead/soulless-bat-se-3.png~RC(magenta>$side_color[0].color|)
+					[/effect]
+				[/trait]
+			[/modify_unit]
+		[/then]
+		[elseif]
+			{VARIABLE_CONDITIONAL unit.undead_variation equals beast_rider}
+			[then]
+				[modify_unit]
+					{FILTER_EVENT_UNIT}
+					[trait]
+						id=nfwme_corpse_image
+						[effect]
+							apply_to=overlay
+							add=units/undead/soulless-beastrider.png~RC(magenta>$side_color[0].color|)
+						[/effect]
+					[/trait]
+				[/modify_unit]
+			[/then]
+		[/elseif]
+		[elseif]
+			{VARIABLE_CONDITIONAL unit.undead_variation equals sand_scorpion}
+			[then]
+				[modify_unit]
+					{FILTER_EVENT_UNIT}
+					[trait]
+						id=nfwme_corpse_image
+						[effect]
+							apply_to=overlay
+							add=units/undead/soulless-scorpion.png~RC(magenta>$side_color[0].color|)
+						[/effect]
+					[/trait]
+				[/modify_unit]
+			[/then]
+		[/elseif]
+		[elseif]
+			# Compare with empty var, never use nfw_empty_var as variable
+			[variable]
+				name=unit.undead_variation
+				equals=$nfw_empty_var
+			[/variable]
+			[then]
+				[modify_unit]
+					{FILTER_EVENT_UNIT}
+					[trait]
+						id=nfwme_corpse_image
+						[effect]
+							apply_to=overlay
+							add=units/undead/soulless.png~RC(magenta>$side_color[0].color|)
+						[/effect]
+					[/trait]
+				[/modify_unit]
+			[/then]
+		[/elseif]
+		[else]
+			[modify_unit]
+				{FILTER_EVENT_UNIT}
+				[trait]
+					id=nfwme_corpse_image
+					[effect]
+						apply_to=overlay
+						add=units/undead/soulless-$unit.undead_variation|.png~RC(magenta>$side_color[0].color|)
+					[/effect]
+				[/trait]
+			[/modify_unit]
+		[/else]
+	[/if]
+	[message]
+		speaker=narrator
+		message="Variación $unit.undead_variation Color $side_color[0].color"
+		side_for=$side_number
+		image="units/human-loyalists/duelist-die5.png"
+	[/message]
 	
 	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Zombie" {NFWME_COLOR_RED}}
 #enddef
