--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -19,7 +19,16 @@
     [remove_event]
         id=nfw_catch_last_breath
     [/remove_event]
-    {CLEAR_VARIABLE nfw_wounded}
+    [remove_event]
+        id=nfwme_rand_wound_id
+    [/remove_event]
+	[event]
+		name=nfwme_rand_wound
+		id=nfwme_rand_wound_id
+		first_time_only=no
+		{NFWME_dead_WOUND}
+	[/event]
+	{CLEAR_VARIABLE nfw_wounded}
 [/event]
 
 # There shouldn't be a value of nfw_wounded from a previous scenario, but clear it just in case.
@@ -74,7 +83,7 @@
     [/filter]
 	[store_unit_type]
 		type=$unit.type
-		variable=nfwme_unit_type
+		variable=nfwe_unit_type
 	[/store_unit_type]	
 	[if]
 		[have_location]
@@ -91,7 +100,7 @@
 			[/message]
 			[message]
 				speaker=narrator
-				message= _ "$unit.name a $nfwme_unit_type.name was destroyed."
+				message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
 				image=$unit.profile
 			[/message]
 		[/then]
@@ -110,7 +119,7 @@
 				[/message]
 				[message]
 					speaker=narrator
-					message= _ "$unit.name a $nfwme_unit_type.name was revived as undead."
+					message= _ "$unit.name a $nfwe_unit_type.name was revived as undead."
 					image=$unit.profile
 				[/message]
 			[/then]
@@ -130,7 +139,7 @@
 				[/message]
 				[message]
 					speaker=narrator
-					message= _ "$unit.name a $nfwme_unit_type.name returned as a ghost."
+					message= _ "$unit.name a $nfwe_unit_type.name returned as a ghost."
 					image=$unit.profile
 				[/message]
 			[/then]
@@ -150,7 +159,7 @@
 				[/message]
 				[message]
 					speaker=narrator
-					message= _ "$unit.name a $nfwme_unit_type.name was converted by the enemy."
+					message= _ "$unit.name a $nfwe_unit_type.name was converted by the enemy."
 					image=$unit.profile
 				[/message]
 			[/then]
@@ -170,7 +179,7 @@
 				[/message]
 				[message]
 					speaker=narrator
-					message= _ "$unit.name a $nfwme_unit_type.name was captured by the enemy. You will have to pay a ransom."
+					message= _ "$unit.name a $nfwe_unit_type.name was captured by the enemy. You will have to pay a ransom."
 					image=$unit.profile
 				[/message]
 			[/then]
