--- a/_main.cfg
+++ b/_main.cfg
@@ -28,5 +28,6 @@ This does not apply to any unit that the objectives require you to keep alive. E
 	{./utils/campaigns.cfg}
 	{./utils/last_scenario.cfg}
 	{./utils/nfw_main.cfg}
+	{./utils/help_menu.cfg}
 
 [/modification]
